force-app/main/default/objects/ChainedTriggerInterceptor__mdt/ChainedTriggerInterceptor__mdt.object-meta.xml
<CustomObject>
    <label>Chained Trigger Interceptor</label>
    <pluralLabel>Chained Trigger Interceptors</pluralLabel>
</CustomObject>