force-app/main/default/objects/ChainedTriggerInterceptor__mdt/fields/TriggerFilterName__c.field-meta.xml
<CustomField>
    <fullName>TriggerFilterName__c</fullName>
    <description>TriggerFilterName</description>
    <label>Trigger Filter Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>